--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keycloak-auth-utils",
-  "version": "0.1.1",
+  "version": "1.1.0-Smartling",
   "description": "Keycloak OAuth client.",
   "keywords": [
     "keycloak",
