--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keycloak-auth-utils",
-  "version": "1.1.0-Smartling",
+  "version": "1.2.0-Smt",
   "description": "Keycloak OAuth client.",
   "keywords": [
     "keycloak",
